--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "build": "webpack --config webpack.prod.config.js",
-    "dev": "webpack serve --config webpack.dev.config.js"
+    "local": "NODE_ENV=local webpack serve --config webpack.dev.config.js",
+    "prod": "NODE_ENV=prod webpack serve --config webpack.prod.config.js"
   },
   "author": "Ethan Phelps",
   "license": "ISC",
