--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ethan Phelps",
   "license": "ISC",
   "dependencies": {
+    "amazon-cognito-identity-js": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spinners": "^0.13.6"
